# pinocchio-stake-program

./: README.md
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  lib.rs  vote_state.rs
program/src/helpers/: authorize.rs  constant.rs  merge.rs  mod.rs  serialization.rs  utils.rs
program/src/instruction/: authorize.rs  authorize_checked.rs  deactivate.rs  deactivate_delinquent.rs  initialize.rs  initialize_checked.rs  merge.rs  merge_dedicated.rs  mod.rs  move_lamports.rs  move_stake.rs  process_authorize_checked_with_seed.rs  process_authorized_with_seeds.rs  process_delegate.rs  process_move_stake.rs  process_redelegate.rs  process_set_lockup.rs  process_set_lockup_checked.rs  process_withdraw.rs  set_lockup.rs  split.rs  withdraw.rs
program/src/state/: account.rs  accounts.rs  delegation.rs  merge_kind.rs  mod.rs  stake.rs  stake_flag.rs  stake_history.rs  stake_state_v2.rs  state.rs  vote_state.rs
program/tests/: authorize.rs  authorize_basic.rs  authorize_with_seed.rs  bench.rs  deactivate.rs  deactivate_delinquent.rs  delegate.rs  initialize.rs  merge.rs  move_lamports.rs  move_stake.rs  program_test.rs  set_lockup.rs  smoke.rs  split.rs  withdraw.rs
program/tests/common/: mod.rs  pin_adapter.rs
