[package]
name = "pinocchio-stake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pinocchio = { git = "https://github.com/anza-xyz/pinocchio", branch = "main" }
pinocchio-log = "0.5.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
shank = "0.4.2"

bincode = { version = "1.3.3", default-features = false }
hashbrown = { version = "0.14.5", default-features = false }
bytemuck = { version = "1.14", default-features = false, features = ["derive"] }

[dev-dependencies]
solana-sdk = "2.1.0"
mollusk-svm = "0.4.0"
mollusk-svm-bencher = "0.4.0"
bincode = "1.3.3"

[features]
no-entrypoint = []
test-default = ["no-entrypoint"]
bench-default = ["no-entrypoint"]
default = []