[package]
name = "pinocchio-stake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pinocchio = "0.9.0"
pinocchio-log = "0.5.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
shank = "0.4.2"
serde = { version = "1", features = ["derive"] }
bincode = "1"

[dev-dependencies]
solana-program-test = "2.3.9"
solana-sdk          = "2.3.1"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
bincode = "1"
test-case = "3"

[features]
# Build for the chain (SBF, no_std, real entrypoint, panic handler)
sbf = ["bpf-entrypoint"]

# Controls the entrypoint module inclusion
bpf-entrypoint = []
no-entrypoint = []

# Host builds use std; tests run here
std = []

# Default host/dev: std + NO entrypoint (keeps IDE/cargo happy)
default = ["std", "no-entrypoint"]
e2e = []
seed = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[test]]
name = "program_test"
path = "tests/program_test.rs"
required-features = ["e2e"]

[[test]]
name = "authorize_with_seed"
path = "tests/authorize_with_seed.rs"
required-features = ["seed"]